[package]
name = "ocular-somm-gravity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gravity_proto = { path = "../gravity-bridge/orchestrator/gravity_proto" }
ocular = { path = "../ocular" }
eyre = "0.6.8"
tonic = "0.8.2"
async-trait = "0.1.58"
prost-types = "0.11.1"
prost = "0.11.0"
